<resources>
    <string name="app_name">PZ</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Logistics -->
    <string name="main_title">PZ</string>
    <string name="version_mark">Version: </string>
    <string name="version_num">1.0.0</string>

    <string name="design_000">Profile</string>
    <string name="design_001">Schedule</string>
    <string name="design_002">Settings</string>

    <string name="design_003">Auto</string>
    <string name="design_004">Manual</string>

    <!-- Authentication Screen -->
    <string name="auth_title">Device Authentication</string>
    <string name="auth_prompt_00">Authenticate the device</string>
    <string name="auth_prompt_01">to proceed.</string>
    <string name="auth_prompt_02">Authenticate the\ndevice to proceed.</string>
    <string name="auth_enter">Authenticate</string>
    <string name="auth_scan_qr">Scan QR</string>

    <string name="auth_demo">Demo Screen</string>

    <!-- Main Screen -->
    <string name="main_clock">Clock Selection</string>
    <string name="main_speed">Speed</string>

    <string name="clock_wise">Clock-Wise</string>
    <string name="clock_counter">Counter Clock</string>

    <string name="bluetooth_switch">Bluetooth Switch</string>
    <string name="bluetooth_scan">Bluetooth Scan</string>
    <string name="bluetooth_scan_000">sophie Bluetooth</string>
    <string name="bluetooth_scan_001">HM-10 Bluetooth</string>

    <string name="wifi_scan">Wi-fi Scan</string>

    <!-- Fragment Panel -->
    <string name="frag_clock">Clock</string>
    <string name="frag_setting">Setting</string>
    <string name="title_activity_design_screen">PZ Menu</string>

    <string-array name="navigation_drawer_items_array">
        <item>Configure</item>
        <item>Manage</item>
        <item>Settings</item>
    </string-array>

    <string name="drawer_000">Configure</string>
    <string name="drawer_001">Manage</string>
    <string name="drawer_002">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Bluetooth Popup -->
    <string name="bluetooth_000">Bluetooth Scan</string>
    <string name="bluetooth_001">Failed to find any Bluetooth devices nearby.\nPlease try again.</string>
    <string name="bluetooth_002">Close</string>

    <string name="bluetooth_003">Scanning for devices...\nPlease wait.</string>

    <string name="bluetooth_004">(No Name)</string>
    <string name="bluetooth_005"></string>
    <string name="title_activity_bluetooth_scanner">Bluetooth Scanner</string>

    <string name="connect_000">Connect Device</string>
    <string name="connect_001">Close</string>
    <string name="connect_002">Connect</string>
    <string name="connect_003">Connecting to the device </string>
    <string name="connect_004">.\nProceed with the connection?</string>

    <string name="title_activity_control_panel">PZ Control Panel</string>
    <string name="element_000">Bluetooth</string>
    <string name="element_001">Wi-fi</string>
    <string name="element_002">QR Code</string>
    <string name="element_003">Unknown</string>

    <string name="control_000">Test</string>
    <string name="control_001">Test</string>
    <string name="control_002">Test</string>
    <string name="control_003">Test</string>

    <string name="button_000">0</string>
    <string name="button_001">1</string>
    <string name="button_002">2</string>
    <string name="button_003">3</string>
    <string name="button_004">4</string>

    <string name="command_label">PZ Command Log</string>
    <string name="command_log">Connecting...</string>
    <string name="command_000">\nConnected successfully to </string>
    <string name="command_000a">Bluetooth device: </string>
    <string name="command_000b">Wi-fi device: </string>
    <string name="command_001">\nCommand 1:</string>
    <string name="command_002">\nCommand 2:</string>
    <string name="command_003">\nCommand 3:</string>

    <string name="destination_device">sophie</string>

    <string name="button_disconnect">Disconnect</string>
    <string name="button_connect">Connect</string>

    <string name="button_005">Auto Left</string>
    <string name="button_006">Stop</string>
    <string name="button_007">Auto Right</string>
    <string name="button_008">Manual Left</string>
    <string name="button_009">Manual Right</string>

    <string name="button_010">-</string>
    <string name="button_011">+</string>
    <string name="speed_level">Speed: </string>

    <string name="title_activity_sophie_btcontrol">sophie Bluetooth</string>
    <string name="title_activity_device_scan">DeviceScanActivity</string>
    <string name="title_activity_device_control">DeviceControlActivity</string>
    <string name="title_activity_second_device_control">SecondDeviceControlActivity</string>
    <string name="title_activity_second_device_scan">SecondDeviceScanActivity</string>
    <string name="title_activity_tethercell">TethercellActivity</string>
    <string name="title_activity_service">ServiceActivity</string>
    <string name="title_activity_hm10">HM10Activity</string>
    <string name="title_activity_sensor_tag">SensorTagActivity</string>
    <string name="title_activity_control_light">ControlLightActivity</string>
    <string name="title_activity_bleduino_uart">BLEduinoUartActivity</string>
    <string name="title_activity_device">DeviceActivity</string>

</resources>
