<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:textSize="25dp"
        android:text="@string/main_clock" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/button_clock"
            android:layout_marginRight="5dp"
            android:layout_width="175dp"
            android:layout_height="60dp"
            android:textSize="15dp"
            android:gravity="center"
            android:text="@string/clock_wise" />

        <Button
            android:id="@+id/button_counter"
            android:layout_marginLeft="5dp"
            android:layout_width="175dp"
            android:layout_height="60dp"
            android:textSize="15dp"
            android:gravity="center"
            android:text="@string/clock_counter" />

    </TableRow>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textSize="25dp"
        android:text="@string/main_speed" />

    <SeekBar
        android:id="@+id/seek1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:progress="50"
        android:secondaryProgress="100" />

        <Button
            android:id="@+id/button_scan"
            android:layout_marginRight="5dp"
            android:layout_width="275dp"
            android:layout_height="75dp"
            android:textSize="25dp"
            android:gravity="center"
            android:text="@string/bluetooth_scan" />

    <Button
        android:id="@+id/wifi_scan"
        android:layout_marginRight="5dp"
        android:layout_width="275dp"
        android:layout_height="75dp"
        android:textSize="25dp"
        android:gravity="center"
        android:text="@string/wifi_scan" />

</LinearLayout>