<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pz.cse145.pz.ControlPanel"
    android:orientation="vertical"
    android:layout_gravity="center|top"
    android:id="@+id/control_panel" >

    <TextView
        android:id="@+id/text_00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:textColor="#000000"
        android:text="@string/control_000" />

    <TextView
        android:id="@+id/text_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:textColor="#000000"
        android:text="@string/control_000" />

    <TextView
        android:id="@+id/text_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:textColor="#000000"
        android:text="@string/control_000" />

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center" >

        <Button
            android:id="@+id/button_000"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="#000000"
            android:onClick="onButton_000"
            android:text="@string/button_000" />

        <Button
            android:id="@+id/button_001"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="#000000"
            android:onClick="onButton_001"
            android:text="@string/button_001" />

        <Button
            android:id="@+id/button_002"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="#000000"
            android:onClick="onButton_002"
            android:text="@string/button_002" />

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center" >

        <Button
            android:id="@+id/button_003"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="#000000"
            android:onClick="onButton_003"
            android:text="@string/button_003" />

        <Button
            android:id="@+id/button_004"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="#000000"
            android:onClick="onButton_004"
            android:text="@string/button_004" />

    </TableRow>

    <TextView
        android:id="@+id/text_03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:textColor="#000000"
        android:text="@string/command_label" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/command_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:textColor="#000000"
            android:text="@string/command_log" />

    </ScrollView>

</LinearLayout>
